# pico-timer-7seg

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  segment_display.rs
