[package]
edition = "2021"
name = "pico-timer-7seg"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.5"
rp2040-hal = "0.6"
panic-halt = "0.2"
fugit = "0.3.5"
critical-section = { version = "1.0.0" }
